--- a/labs.html
+++ b/labs.html
@@ -65,14 +65,9 @@
   <h3>Lab 2 - Section 3 v2</h3>
   <iframe src="https://docs.google.com/document/d/e/2PACX-1vSJLSFLB_gaup4qzBWj8XcliGz6HJZ6YwL0_iCpGKNQhtzZovdTkeWNqBsMV-LHD1hZXW40-3r5adLX/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
 
-  <!-- The original way -->	  
+  <!-- Iframe doesn't work for github wiki -->	  
   <h3>Lab 3 & 4 - User Manual</h3>
   <h4><a href="https://github.com/MonarchCourseExplorer/Prototype/wiki/" target="_blank">User Manual - Lab 3 & 4</a></h4>
-
-  <!-- The Iframe way -->
-  <h3>Lab 3 & 4 - User Manual</h3>
-  <iframe src="https://github.com/MonarchCourseExplorer/Prototype/wiki" frameborder="0" width="960" height="569"></iframe>
-	  
     	  
   <!-- Footer -->
   <footer class="w3-container w3-padding-32 w3-dark-grey">
