--- a/individual.html
+++ b/individual.html
@@ -59,14 +59,129 @@
   </header>
 
 <!-- Going to put the list here -->	  
-  <h3>Solution Characteristics</h3>
-  <ul>
-    <li>A moderated platform where students can upload syllabi from their selected courses at ODU to be accessed by peers.</li>
-    <li>Important: According to George Washington University Editorial: “Syllabi are crucial for students to build their day-to-day schedules” not having one available can “force students into more unpredictable lives” (Anderson and Chinowsky. 2020)</li>
-    <li>Ohio State University has an online syllabi system that aids students in gauging if the course if right for their schedule. This gives the student more assurance in their course choices (Cartwright. 2016)</li>
-    <li>Students can provide and view constructive feedback about their courses (specified by semester and faculty). </li>
-    <li>Faculty can view and comment on the feedback given by students</li>
-  </ul>
+   
+ <h3>CURRENTLY EDITING</h3>
+ <h3>Kelsey Marantan</h3>
+ <h3>Lab 1 Version 1</h3>
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vQ6VLX9-Fg8x9R7cSjOfFwdbQpw7TobyXPBd_VRErL60jImeyU735sXAt72BRsWgx3WB2R1_u5eu3Rt/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+
+  <h3>Lab 1 Version 2</h3>
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vT108uRy0Zg0krULKhW-MbN42aYTVPW9iR0DqMdrcqT1htOB1E9kfXL6lRUZoAYng/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  
+  <h3>Lab 2 - Section 3 v1</h3>
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vS0BT6VTHi_4uO5V8ToeDqASDVN21i5vOmzvs83KlS4ajEvA2DH7t29zjGnuFVEmw/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+
+  <h3>Lab 2 - Section 3 v2</h3>
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vSJLSFLB_gaup4qzBWj8XcliGz6HJZ6YwL0_iCpGKNQhtzZovdTkeWNqBsMV-LHD1hZXW40-3r5adLX/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  
+ <h3>----------------------</h3>
+	  
+ <h3>Alex Brown</h3>
+ <h3>Lab 1 Version 1</h3>
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vQ6VLX9-Fg8x9R7cSjOfFwdbQpw7TobyXPBd_VRErL60jImeyU735sXAt72BRsWgx3WB2R1_u5eu3Rt/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+
+  <h3>Lab 1 Version 2</h3>
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vT108uRy0Zg0krULKhW-MbN42aYTVPW9iR0DqMdrcqT1htOB1E9kfXL6lRUZoAYng/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  
+  <h3>Lab 2 - Section 3 v1</h3>
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vS0BT6VTHi_4uO5V8ToeDqASDVN21i5vOmzvs83KlS4ajEvA2DH7t29zjGnuFVEmw/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+
+  <h3>Lab 2 - Section 3 v2</h3>
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vSJLSFLB_gaup4qzBWj8XcliGz6HJZ6YwL0_iCpGKNQhtzZovdTkeWNqBsMV-LHD1hZXW40-3r5adLX/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  
+ <h3>----------------------</h3>
+ 
+ <h3>Nia (Jodi) Newton</h3>
+ <h3>Lab 1 Version 1</h3>
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vQ6VLX9-Fg8x9R7cSjOfFwdbQpw7TobyXPBd_VRErL60jImeyU735sXAt72BRsWgx3WB2R1_u5eu3Rt/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+
+  <h3>Lab 1 Version 2</h3>
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vT108uRy0Zg0krULKhW-MbN42aYTVPW9iR0DqMdrcqT1htOB1E9kfXL6lRUZoAYng/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  
+  <h3>Lab 2 - Section 3 v1</h3>
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vS0BT6VTHi_4uO5V8ToeDqASDVN21i5vOmzvs83KlS4ajEvA2DH7t29zjGnuFVEmw/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+
+  <h3>Lab 2 - Section 3 v2</h3>
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vSJLSFLB_gaup4qzBWj8XcliGz6HJZ6YwL0_iCpGKNQhtzZovdTkeWNqBsMV-LHD1hZXW40-3r5adLX/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  
+  <h3>----------------------</h3>
+  
+  <h3>Adam Pieroni</h3>
+  <h3>Lab 1 Version 1</h3>
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vQ6VLX9-Fg8x9R7cSjOfFwdbQpw7TobyXPBd_VRErL60jImeyU735sXAt72BRsWgx3WB2R1_u5eu3Rt/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+
+  <h3>Lab 1 Version 2</h3>
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vT108uRy0Zg0krULKhW-MbN42aYTVPW9iR0DqMdrcqT1htOB1E9kfXL6lRUZoAYng/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  
+  <h3>Lab 2 - Section 3 v1</h3>
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vS0BT6VTHi_4uO5V8ToeDqASDVN21i5vOmzvs83KlS4ajEvA2DH7t29zjGnuFVEmw/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+
+  <h3>Lab 2 - Section 3 v2</h3>
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vSJLSFLB_gaup4qzBWj8XcliGz6HJZ6YwL0_iCpGKNQhtzZovdTkeWNqBsMV-LHD1hZXW40-3r5adLX/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  
+  <h3>----------------------</h3>
+  
+  <h3>William Varnier</h3>
+  <h3>Lab 1 Version 1</h3>
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vQ6VLX9-Fg8x9R7cSjOfFwdbQpw7TobyXPBd_VRErL60jImeyU735sXAt72BRsWgx3WB2R1_u5eu3Rt/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+
+  <h3>Lab 1 Version 2</h3>
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vT108uRy0Zg0krULKhW-MbN42aYTVPW9iR0DqMdrcqT1htOB1E9kfXL6lRUZoAYng/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  
+  <h3>Lab 2 - Section 3 v1</h3>
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vS0BT6VTHi_4uO5V8ToeDqASDVN21i5vOmzvs83KlS4ajEvA2DH7t29zjGnuFVEmw/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+
+  <h3>Lab 2 - Section 3 v2</h3>
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vSJLSFLB_gaup4qzBWj8XcliGz6HJZ6YwL0_iCpGKNQhtzZovdTkeWNqBsMV-LHD1hZXW40-3r5adLX/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  
+  <h3>----------------------</h3>
+  
+  <h3>Phillip Wilson</h3>
+  <h3>Lab 1 Version 1</h3>
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vQ6VLX9-Fg8x9R7cSjOfFwdbQpw7TobyXPBd_VRErL60jImeyU735sXAt72BRsWgx3WB2R1_u5eu3Rt/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+
+  <h3>Lab 1 Version 2</h3>
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vT108uRy0Zg0krULKhW-MbN42aYTVPW9iR0DqMdrcqT1htOB1E9kfXL6lRUZoAYng/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  
+  <h3>Lab 2 - Section 3 v1</h3>
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vS0BT6VTHi_4uO5V8ToeDqASDVN21i5vOmzvs83KlS4ajEvA2DH7t29zjGnuFVEmw/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+
+  <h3>Lab 2 - Section 3 v2</h3>
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vSJLSFLB_gaup4qzBWj8XcliGz6HJZ6YwL0_iCpGKNQhtzZovdTkeWNqBsMV-LHD1hZXW40-3r5adLX/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  
+  <h3>----------------------</h3>
+  
+  <h3>David Jennings</h3>
+  <h3>Lab 1 Version 1</h3>
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vQ6VLX9-Fg8x9R7cSjOfFwdbQpw7TobyXPBd_VRErL60jImeyU735sXAt72BRsWgx3WB2R1_u5eu3Rt/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+
+  <h3>Lab 1 Version 2</h3>
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vT108uRy0Zg0krULKhW-MbN42aYTVPW9iR0DqMdrcqT1htOB1E9kfXL6lRUZoAYng/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  
+  <h3>Lab 2 - Section 3 v1</h3>
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vS0BT6VTHi_4uO5V8ToeDqASDVN21i5vOmzvs83KlS4ajEvA2DH7t29zjGnuFVEmw/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+
+  <h3>Lab 2 - Section 3 v2</h3>
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vSJLSFLB_gaup4qzBWj8XcliGz6HJZ6YwL0_iCpGKNQhtzZovdTkeWNqBsMV-LHD1hZXW40-3r5adLX/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  
+  <h3>----------------------</h3>
+  
+  <h3>Kevin Carr</h3>
+  <h3>Lab 1 Version 1</h3>
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vQ6VLX9-Fg8x9R7cSjOfFwdbQpw7TobyXPBd_VRErL60jImeyU735sXAt72BRsWgx3WB2R1_u5eu3Rt/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+
+  <h3>Lab 1 Version 2</h3>
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vT108uRy0Zg0krULKhW-MbN42aYTVPW9iR0DqMdrcqT1htOB1E9kfXL6lRUZoAYng/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  
+  <h3>Lab 2 - Section 3 v1</h3>
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vS0BT6VTHi_4uO5V8ToeDqASDVN21i5vOmzvs83KlS4ajEvA2DH7t29zjGnuFVEmw/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+
+  <h3>Lab 2 - Section 3 v2</h3>
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vSJLSFLB_gaup4qzBWj8XcliGz6HJZ6YwL0_iCpGKNQhtzZovdTkeWNqBsMV-LHD1hZXW40-3r5adLX/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  
+  <h3>----------------------</h3>
+  
+  
 	  
   <!-- Footer -->
   <footer class="w3-container w3-padding-32 w3-dark-grey">
