--- a/individual.html
+++ b/individual.html
@@ -68,10 +68,10 @@
   <h3>Lab 1 Version 2</h3>
   <iframe src="https://docs.google.com/document/d/e/2PACX-1vT108uRy0Zg0krULKhW-MbN42aYTVPW9iR0DqMdrcqT1htOB1E9kfXL6lRUZoAYng/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
   
-  <h3>Lab 2 - Section 3 v1</h3>
+  <h3>Lab 2 - Section 1 & 2 v1</h3>
   <iframe src="https://docs.google.com/document/d/e/2PACX-1vS0BT6VTHi_4uO5V8ToeDqASDVN21i5vOmzvs83KlS4ajEvA2DH7t29zjGnuFVEmw/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
 
-  <h3>Lab 2 - Section 3 v2</h3>
+  <h3>Lab 2 - Section 1 & 2 v2</h3>
   <iframe src="https://docs.google.com/document/d/e/2PACX-1vSJLSFLB_gaup4qzBWj8XcliGz6HJZ6YwL0_iCpGKNQhtzZovdTkeWNqBsMV-LHD1hZXW40-3r5adLX/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
   
  <h3>----------------------</h3>
@@ -83,10 +83,10 @@
   <h3>Lab 1 Version 2</h3>
   <iframe src="https://docs.google.com/document/d/e/2PACX-1vT108uRy0Zg0krULKhW-MbN42aYTVPW9iR0DqMdrcqT1htOB1E9kfXL6lRUZoAYng/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
   
-  <h3>Lab 2 - Section 3 v1</h3>
+  <h3>Lab 2 - Section 1 & 2 v1</h3>
   <iframe src="https://docs.google.com/document/d/e/2PACX-1vS0BT6VTHi_4uO5V8ToeDqASDVN21i5vOmzvs83KlS4ajEvA2DH7t29zjGnuFVEmw/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
 
-  <h3>Lab 2 - Section 3 v2</h3>
+  <h3>Lab 2 - Section 1 & 2 v2</h3>
   <iframe src="https://docs.google.com/document/d/e/2PACX-1vSJLSFLB_gaup4qzBWj8XcliGz6HJZ6YwL0_iCpGKNQhtzZovdTkeWNqBsMV-LHD1hZXW40-3r5adLX/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
   
  <h3>----------------------</h3>
@@ -98,10 +98,10 @@
   <h3>Lab 1 Version 2</h3>
   <iframe src="https://docs.google.com/document/d/e/2PACX-1vT108uRy0Zg0krULKhW-MbN42aYTVPW9iR0DqMdrcqT1htOB1E9kfXL6lRUZoAYng/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
   
-  <h3>Lab 2 - Section 3 v1</h3>
+  <h3>Lab 2 - Section 1 & 2 v1</h3>
   <iframe src="https://docs.google.com/document/d/e/2PACX-1vS0BT6VTHi_4uO5V8ToeDqASDVN21i5vOmzvs83KlS4ajEvA2DH7t29zjGnuFVEmw/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
 
-  <h3>Lab 2 - Section 3 v2</h3>
+  <h3>Lab 2 - Section 1 & 2 v2</h3>
   <iframe src="https://docs.google.com/document/d/e/2PACX-1vSJLSFLB_gaup4qzBWj8XcliGz6HJZ6YwL0_iCpGKNQhtzZovdTkeWNqBsMV-LHD1hZXW40-3r5adLX/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
   
   <h3>----------------------</h3>
@@ -113,10 +113,10 @@
   <h3>Lab 1 Version 2</h3>
   <iframe src="https://docs.google.com/document/d/e/2PACX-1vT108uRy0Zg0krULKhW-MbN42aYTVPW9iR0DqMdrcqT1htOB1E9kfXL6lRUZoAYng/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
   
-  <h3>Lab 2 - Section 3 v1</h3>
+  <h3>Lab 2 - Section 1 & 2 v1</h3>
   <iframe src="https://docs.google.com/document/d/e/2PACX-1vS0BT6VTHi_4uO5V8ToeDqASDVN21i5vOmzvs83KlS4ajEvA2DH7t29zjGnuFVEmw/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
 
-  <h3>Lab 2 - Section 3 v2</h3>
+  <h3>Lab 2 - Section 1 & 2 v2</h3>
   <iframe src="https://docs.google.com/document/d/e/2PACX-1vSJLSFLB_gaup4qzBWj8XcliGz6HJZ6YwL0_iCpGKNQhtzZovdTkeWNqBsMV-LHD1hZXW40-3r5adLX/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
   
   <h3>----------------------</h3>
@@ -128,26 +128,26 @@
   <h3>Lab 1 Version 2</h3>
   <iframe src="https://docs.google.com/document/d/e/2PACX-1vT108uRy0Zg0krULKhW-MbN42aYTVPW9iR0DqMdrcqT1htOB1E9kfXL6lRUZoAYng/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
   
-  <h3>Lab 2 - Section 3 v1</h3>
+  <h3>Lab 2 - Section 1 & 2 v1</h3>
   <iframe src="https://docs.google.com/document/d/e/2PACX-1vS0BT6VTHi_4uO5V8ToeDqASDVN21i5vOmzvs83KlS4ajEvA2DH7t29zjGnuFVEmw/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
 
-  <h3>Lab 2 - Section 3 v2</h3>
+  <h3>Lab 2 - Section 1 & 2 v2</h3>
   <iframe src="https://docs.google.com/document/d/e/2PACX-1vSJLSFLB_gaup4qzBWj8XcliGz6HJZ6YwL0_iCpGKNQhtzZovdTkeWNqBsMV-LHD1hZXW40-3r5adLX/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
   
   <h3>----------------------</h3>
   
   <h3>Phillip Wilson</h3>
   <h3>Lab 1 Version 1</h3>
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vQ6VLX9-Fg8x9R7cSjOfFwdbQpw7TobyXPBd_VRErL60jImeyU735sXAt72BRsWgx3WB2R1_u5eu3Rt/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vSFAfbc6THprUVbPSsN--OXFYq4hGGcylBpGUbxnCsXrEY2-qppxib9qewxigmwZExXcDqSimuu8GqC/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
 
   <h3>Lab 1 Version 2</h3>
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vT108uRy0Zg0krULKhW-MbN42aYTVPW9iR0DqMdrcqT1htOB1E9kfXL6lRUZoAYng/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vQLjKNtnVgM_9v3NEuXgWxoPdZydil3F8A56vzF-HJJcNMSbdU7Sa4DuGsgS39Q7JOAFMjnJDoEaqsh/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
   
-  <h3>Lab 2 - Section 3 v1</h3>
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vS0BT6VTHi_4uO5V8ToeDqASDVN21i5vOmzvs83KlS4ajEvA2DH7t29zjGnuFVEmw/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  <h3>Lab 2 - Section 1 & 2 v1</h3>
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vR8dBPW2qWIBojY38qfycuS0QaeGA_XLmpshkld5WK7p2TXthVM-_XaPITy2E2fe20nicjWGhV8lcDp/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
 
-  <h3>Lab 2 - Section 3 v2</h3>
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vSJLSFLB_gaup4qzBWj8XcliGz6HJZ6YwL0_iCpGKNQhtzZovdTkeWNqBsMV-LHD1hZXW40-3r5adLX/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  <h3>Lab 2 - Section 1 & 2 v2</h3>
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vRKNqFxfCGID7KZh3coJF0z5jk4F-vtLqSHlbOUoYSMy4HfjmefKonpQE_YlfAMZ0zVxpdApWPs1xm3/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
   
   <h3>----------------------</h3>
   
@@ -158,10 +158,10 @@
   <h3>Lab 1 Version 2</h3>
   <iframe src="https://docs.google.com/document/d/e/2PACX-1vT108uRy0Zg0krULKhW-MbN42aYTVPW9iR0DqMdrcqT1htOB1E9kfXL6lRUZoAYng/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
   
-  <h3>Lab 2 - Section 3 v1</h3>
+  <h3>Lab 2 - Section 1 & 2 v1</h3>
   <iframe src="https://docs.google.com/document/d/e/2PACX-1vS0BT6VTHi_4uO5V8ToeDqASDVN21i5vOmzvs83KlS4ajEvA2DH7t29zjGnuFVEmw/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
 
-  <h3>Lab 2 - Section 3 v2</h3>
+  <h3>Lab 2 - Section 1 & 2 v2</h3>
   <iframe src="https://docs.google.com/document/d/e/2PACX-1vSJLSFLB_gaup4qzBWj8XcliGz6HJZ6YwL0_iCpGKNQhtzZovdTkeWNqBsMV-LHD1hZXW40-3r5adLX/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
   
   <h3>----------------------</h3>
@@ -173,10 +173,10 @@
   <h3>Lab 1 Version 2</h3>
   <iframe src="https://docs.google.com/document/d/e/2PACX-1vT108uRy0Zg0krULKhW-MbN42aYTVPW9iR0DqMdrcqT1htOB1E9kfXL6lRUZoAYng/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
   
-  <h3>Lab 2 - Section 3 v1</h3>
+  <h3>Lab 2 - Section 1 & 2 v1</h3>
   <iframe src="https://docs.google.com/document/d/e/2PACX-1vS0BT6VTHi_4uO5V8ToeDqASDVN21i5vOmzvs83KlS4ajEvA2DH7t29zjGnuFVEmw/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
 
-  <h3>Lab 2 - Section 3 v2</h3>
+  <h3>Lab 2 - Section 1 & 2 v2</h3>
   <iframe src="https://docs.google.com/document/d/e/2PACX-1vSJLSFLB_gaup4qzBWj8XcliGz6HJZ6YwL0_iCpGKNQhtzZovdTkeWNqBsMV-LHD1hZXW40-3r5adLX/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
   
   <h3>----------------------</h3>
