--- a/labs.html
+++ b/labs.html
@@ -53,8 +53,13 @@
   </header>
 
   <!-- The way with iframes, publish with in google docs. File, share, publish to web, embed -->
+  <!-- 	  
   <h3>Lab 1 Version 1</h3>
   <iframe src="https://docs.google.com/document/d/e/2PACX-1vQ6VLX9-Fg8x9R7cSjOfFwdbQpw7TobyXPBd_VRErL60jImeyU735sXAt72BRsWgx3WB2R1_u5eu3Rt/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  -->
+
+  <h3>Lab 1 Version 1</h3>
+  <iframe src="labsPDF/Lab 1 Version 1 Collaborative Outline.pdf" frameborder="0" width="960" height="569"></iframe>
 
   <h3>Lab 1 Version 2</h3>
   <iframe src="https://docs.google.com/document/d/e/2PACX-1vT108uRy0Zg0krULKhW-MbN42aYTVPW9iR0DqMdrcqT1htOB1E9kfXL6lRUZoAYng/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
