--- a/labs.html
+++ b/labs.html
@@ -62,7 +62,7 @@
   <iframe src="labsPDF/Lab 1 Version 1 Collaborative Outline.pdf" frameborder="0" width="960" height="569"></iframe>
 
   <h3>Lab 1 Version 2</h3>
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vT108uRy0Zg0krULKhW-MbN42aYTVPW9iR0DqMdrcqT1htOB1E9kfXL6lRUZoAYng/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="labsPDF/Lab 1 Version 2.docx.pdf" frameborder="0" width="960" height="569"></iframe>
   
   <h3>Lab 2 - Section 3 v1</h3>
   <iframe src="https://docs.google.com/document/d/e/2PACX-1vS0BT6VTHi_4uO5V8ToeDqASDVN21i5vOmzvs83KlS4ajEvA2DH7t29zjGnuFVEmw/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
