--- a/labs.html
+++ b/labs.html
@@ -65,10 +65,10 @@
   <iframe src="labsPDF/Lab 1 Version 2.docx.pdf" frameborder="0" width="960" height="569"></iframe>
   
   <h3>Lab 2 - Section 3 v1</h3>
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vS0BT6VTHi_4uO5V8ToeDqASDVN21i5vOmzvs83KlS4ajEvA2DH7t29zjGnuFVEmw/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="labsPDF/Lab 2 Group Section 3 v1.docx.pdf" frameborder="0" width="960" height="569"></iframe>
 
   <h3>Lab 2 - Section 3 v2</h3>
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vSJLSFLB_gaup4qzBWj8XcliGz6HJZ6YwL0_iCpGKNQhtzZovdTkeWNqBsMV-LHD1hZXW40-3r5adLX/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="labsPDF/Lab 2 Group Section 3 v2.pdf" frameborder="0" width="960" height="569"></iframe>
 
   <!-- Iframe doesn't work for github wiki -->	  
   <h3>Lab 3 & 4 - User Manual</h3>
