--- a/individual.html
+++ b/individual.html
@@ -78,7 +78,7 @@
 	  
  <h3>Alex Brown</h3>
  <h3>Lab 1 Version 1</h3>
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vR-d32Jt_5Sg5q3KpkvI4vKdrKHt1ue2zEuQt8r0O_4vGwD9AkoqykUUqaLPfmt4La5V-LOBtptS73y/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="individualPDF/Lab1V1_AlexBrown.pdf" frameborder="0" width="960" height="569"></iframe>
 
   <h3>Lab 1 Version 2</h3>
   <iframe src="https://docs.google.com/document/d/e/2PACX-1vS4Zcq0gOUvlU-pP5qQu6ad3CVu0CfdG3TLcPOJ6aq5cw-v366HMJUnI6Xiqs9Myr5GjwBoLJO_zhB1/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
