--- a/individual.html
+++ b/individual.html
@@ -81,13 +81,13 @@
   <iframe src="individualPDF/Lab1V1_AlexBrown.pdf" frameborder="0" width="960" height="569"></iframe>
 
   <h3>Lab 1 Version 2</h3>
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vS4Zcq0gOUvlU-pP5qQu6ad3CVu0CfdG3TLcPOJ6aq5cw-v366HMJUnI6Xiqs9Myr5GjwBoLJO_zhB1/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="individualPDF/Lab1V2_AlexBrown.pdf" frameborder="0" width="960" height="569"></iframe>
   
   <h3>Lab 2 - Section 1 & 2 Version 1</h3>
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vRplgatVRm1DyK235Ymx5FSh-bQVr-ZismqH6DQmtnpWI5qFjOJaGBEQ4Cb2F-A6bFrLXyL0icIFmbq/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="individualPDF/Lab2V1_AlexBrown.pdf" frameborder="0" width="960" height="569"></iframe>
 
   <h3>Lab 2 - Section 1 & 2 Version 2</h3>
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vRJjCByqDOR2eBEXB0y8ZXb25zWBVUxq4_qjnAYja8fPKx8lCsPjjyr8ItB_UtwpZ4EHZAmxdnymIts/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="individualPDF/Lab2V2_AlexBrown.pdf" frameborder="0" width="960" height="569"></iframe>
   
  <h3>----------------------------------------------------------------------------------------------------</h3>
  
