--- a/individual.html
+++ b/individual.html
@@ -59,20 +59,20 @@
   </header>
 
 <!-- Going to put the list here -->	  
-   
+ <!-- Need Kelsey's Docs -->
  <h3>CURRENTLY EDITING</h3>
  <h3>Kelsey Marantan</h3>
  <h3>Lab 1 Version 1</h3>
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vQ6VLX9-Fg8x9R7cSjOfFwdbQpw7TobyXPBd_VRErL60jImeyU735sXAt72BRsWgx3WB2R1_u5eu3Rt/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="individualPDF/test2.txt" frameborder="0" width="960" height="569"></iframe>
 
   <h3>Lab 1 Version 2</h3>
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vT108uRy0Zg0krULKhW-MbN42aYTVPW9iR0DqMdrcqT1htOB1E9kfXL6lRUZoAYng/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="individualPDF/test2.txt" frameborder="0" width="960" height="569"></iframe>
   
   <h3>Lab 2 - Section 1 & 2 Version 1</h3>
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vS0BT6VTHi_4uO5V8ToeDqASDVN21i5vOmzvs83KlS4ajEvA2DH7t29zjGnuFVEmw/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="individualPDF/test2.txt" frameborder="0" width="960" height="569"></iframe>
 
   <h3>Lab 2 - Section 1 & 2 Version 2</h3>
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vSJLSFLB_gaup4qzBWj8XcliGz6HJZ6YwL0_iCpGKNQhtzZovdTkeWNqBsMV-LHD1hZXW40-3r5adLX/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="individualPDF/test2.txt" frameborder="0" width="960" height="569"></iframe>
   
  <h3>----------------------------------------------------------------------------------------------------</h3>
 	  
@@ -90,94 +90,94 @@
   <iframe src="individualPDF/Lab2V2_AlexBrown.pdf" frameborder="0" width="960" height="569"></iframe>
   
  <h3>----------------------------------------------------------------------------------------------------</h3>
- 
+ <!-- Need Jodi's Docs -->
  <h3>Nia (Jodi) Newton</h3>
  <h3>Lab 1 Version 1</h3>
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vQ6VLX9-Fg8x9R7cSjOfFwdbQpw7TobyXPBd_VRErL60jImeyU735sXAt72BRsWgx3WB2R1_u5eu3Rt/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="individualPDF/test2.txt" frameborder="0" width="960" height="569"></iframe>
 
   <h3>Lab 1 Version 2</h3>
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vT108uRy0Zg0krULKhW-MbN42aYTVPW9iR0DqMdrcqT1htOB1E9kfXL6lRUZoAYng/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="individualPDF/test2.txt" frameborder="0" width="960" height="569"></iframe>
   
   <h3>Lab 2 - Section 1 & 2 Version 1</h3>
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vS0BT6VTHi_4uO5V8ToeDqASDVN21i5vOmzvs83KlS4ajEvA2DH7t29zjGnuFVEmw/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="individualPDF/test2.txt" frameborder="0" width="960" height="569"></iframe>
 
   <h3>Lab 2 - Section 1 & 2 Version 2</h3>
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vSJLSFLB_gaup4qzBWj8XcliGz6HJZ6YwL0_iCpGKNQhtzZovdTkeWNqBsMV-LHD1hZXW40-3r5adLX/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="individualPDF/test2.txt" frameborder="0" width="960" height="569"></iframe>
   
   <h3>----------------------------------------------------------------------------------------------------</h3>
-  
+  <!-- Need Adam's Docs -->
   <h3>Adam Pieroni</h3>
   <h3>Lab 1 Version 1</h3>
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vQ6VLX9-Fg8x9R7cSjOfFwdbQpw7TobyXPBd_VRErL60jImeyU735sXAt72BRsWgx3WB2R1_u5eu3Rt/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="individualPDF/test2.txt" frameborder="0" width="960" height="569"></iframe>
 
   <h3>Lab 1 Version 2</h3>
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vT108uRy0Zg0krULKhW-MbN42aYTVPW9iR0DqMdrcqT1htOB1E9kfXL6lRUZoAYng/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="individualPDF/test2.txt" frameborder="0" width="960" height="569"></iframe>
   
   <h3>Lab 2 - Section 1 & 2 Version 1</h3>
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vS0BT6VTHi_4uO5V8ToeDqASDVN21i5vOmzvs83KlS4ajEvA2DH7t29zjGnuFVEmw/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="individualPDF/test2.txt" frameborder="0" width="960" height="569"></iframe>
 
   <h3>Lab 2 - Section 1 & 2 Version 2</h3>
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vSJLSFLB_gaup4qzBWj8XcliGz6HJZ6YwL0_iCpGKNQhtzZovdTkeWNqBsMV-LHD1hZXW40-3r5adLX/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="individualPDF/test2.txt" frameborder="0" width="960" height="569"></iframe>
   
   <h3>----------------------------------------------------------------------------------------------------</h3>
   
   <h3>William Varnier</h3>
   <h3>Lab 1 Version 1</h3>
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vS6pLETaGUONs-SBXFUcCh3ZxHmau2RPfkVXDfO0Wdoda3adMpXSu_eMrruhEuykj1xkjrxkp093pll/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="individualPDF/Lab1V1_WilliamVarnier.pdf" frameborder="0" width="960" height="569"></iframe>
 
   <h3>Lab 1 Version 2</h3>
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vT4Y8r1T-Dq1nMYxSettJuBZ52rOKB1wNMMGTyPasFio0Okb24lfwxH99Evee60xL8p5ZatQ7IMrbmt/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="individualPDF/Lab1V2_WilliamVarnier.pdf" frameborder="0" width="960" height="569"></iframe>
   
   <h3>Lab 2 - Section 1 & 2 Version 1</h3>
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vSwIPD4m6-ldfCoc7liHPQde23LIfxlXkWcpeoz_QZRYS52Udc2OUJ1hvq6FVV1PLPRqvhu8uTqzl-S/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="individualPDF/Lab2V1_WilliamVarnier.pdf" frameborder="0" width="960" height="569"></iframe>
 
   <h3>Lab 2 - Section 1 & 2 Version 2</h3>
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vRzKJJMeBcNixiqAAglbCSHu8ZwVqGR73c8GmJVA153Xolp4M3TBpmn7vjo8GDpX5XVLFIMdu7oZ4Yx/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="individualPDF/Lab2V2_WilliamVarnier.pdf" frameborder="0" width="960" height="569"></iframe>
   
   <h3>----------------------------------------------------------------------------------------------------</h3>
   
   <h3>Phillip Wilson</h3>
   <h3>Lab 1 Version 1</h3>
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vSFAfbc6THprUVbPSsN--OXFYq4hGGcylBpGUbxnCsXrEY2-qppxib9qewxigmwZExXcDqSimuu8GqC/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="individualPDF/Lab1V1_PhillipWilson.pdf" frameborder="0" width="960" height="569"></iframe>
 
   <h3>Lab 1 Version 2</h3>
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vQLjKNtnVgM_9v3NEuXgWxoPdZydil3F8A56vzF-HJJcNMSbdU7Sa4DuGsgS39Q7JOAFMjnJDoEaqsh/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="individualPDF/Lab1V2_PhillipWilson.pdf" frameborder="0" width="960" height="569"></iframe>
   
   <h3>Lab 2 - Section 1 & 2 Version 1</h3>
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vR8dBPW2qWIBojY38qfycuS0QaeGA_XLmpshkld5WK7p2TXthVM-_XaPITy2E2fe20nicjWGhV8lcDp/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="individualPDF/Lab2V1_PhillipWilson.pdf" frameborder="0" width="960" height="569"></iframe>
 
   <h3>Lab 2 - Section 1 & 2 Version 2</h3>
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vRKNqFxfCGID7KZh3coJF0z5jk4F-vtLqSHlbOUoYSMy4HfjmefKonpQE_YlfAMZ0zVxpdApWPs1xm3/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="individualPDF/Lab2V2_PhillipWilson.pdf" frameborder="0" width="960" height="569"></iframe>
   
   <h3>----------------------------------------------------------------------------------------------------</h3>
-  
+  <!-- Need David's Docs -->
   <h3>David Jennings</h3>
   <h3>Lab 1 Version 1</h3>
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vQ6VLX9-Fg8x9R7cSjOfFwdbQpw7TobyXPBd_VRErL60jImeyU735sXAt72BRsWgx3WB2R1_u5eu3Rt/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="individualPDF/test2.txt" frameborder="0" width="960" height="569"></iframe>
 
   <h3>Lab 1 Version 2</h3>
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vT108uRy0Zg0krULKhW-MbN42aYTVPW9iR0DqMdrcqT1htOB1E9kfXL6lRUZoAYng/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="individualPDF/test2.txt" frameborder="0" width="960" height="569"></iframe>
   
   <h3>Lab 2 - Section 1 & 2 Version 1</h3>
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vS0BT6VTHi_4uO5V8ToeDqASDVN21i5vOmzvs83KlS4ajEvA2DH7t29zjGnuFVEmw/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="individualPDF/test2.txt" frameborder="0" width="960" height="569"></iframe>
 
   <h3>Lab 2 - Section 1 & 2 Version 2</h3>
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vSJLSFLB_gaup4qzBWj8XcliGz6HJZ6YwL0_iCpGKNQhtzZovdTkeWNqBsMV-LHD1hZXW40-3r5adLX/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="individualPDF/test2.txt" frameborder="0" width="960" height="569"></iframe>
   
   <h3>----------------------------------------------------------------------------------------------------</h3>
   
   <h3>Kevin Carr</h3>
   <h3>Lab 1 Version 1</h3>
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vQS48vtk6YfnobHQYSFmkSs_jvklA3w4BspjrGpBKRGn3JuQ7b7a33XcPo3fjUYDtF4g0dQvrNPCiUc/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="individualPDF/Lab1V1_KevinCarr.pdf" frameborder="0" width="960" height="569"></iframe>
 
   <h3>Lab 1 Version 2</h3>
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vTJLpQL3Jr8lMPsU5Bz7Wg5_Czc9J1SHl2PGW1gIoglqJf_OZx8O9RBhKvEqu8ULX0vbbtCMAH06XAU/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="individualPDF/Lab1V2_KevinCarr.pdf" frameborder="0" width="960" height="569"></iframe>
   
   <h3>Lab 2 - Section 1 & 2 Version 1</h3>
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vSg1DcvYBUkxmMCB3BoXYmhqfbMC0NOmBnEPjNEvGfES5oejUwElBTJbS9EE_ej2BnnX-FPUhQIBJh5/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="individualPDF/Lab2V1_KevinCarr.pdf" frameborder="0" width="960" height="569"></iframe>
 
   <h3>Lab 2 - Section 1 & 2 Version 2</h3>
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vRvcfQjfQDEv2zCwwhW8VCjsQZqf5myPkINYDRMixRQRtPcYiJXqcCosNgfKxMaZ7XcR0-9JSK3D2TD/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="individualPDF/Lab2V2_KevinCarr.pdf" frameborder="0" width="960" height="569"></iframe>
   
   <h3>----------------------------------------------------------------------------------------------------</h3>
   
