--- a/individual.html
+++ b/individual.html
@@ -63,16 +63,16 @@
  <h3>CURRENTLY EDITING</h3>
  <h3>Kelsey Marantan</h3>
  <h3>Lab 1 Version 1</h3>
-  <iframe src="individualPDF/test2.txt" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="individualPDF/Lab1V1_Kelsey.pdf" frameborder="0" width="960" height="569"></iframe>
 
   <h3>Lab 1 Version 2</h3>
-  <iframe src="individualPDF/test2.txt" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="individualPDF/Lab1V2_Kelsey.pdf" frameborder="0" width="960" height="569"></iframe>
   
   <h3>Lab 2 - Section 1 & 2 Version 1</h3>
-  <iframe src="individualPDF/test2.txt" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="individualPDF/Lab2V1_Kelsey.pdf" frameborder="0" width="960" height="569"></iframe>
 
   <h3>Lab 2 - Section 1 & 2 Version 2</h3>
-  <iframe src="individualPDF/test2.txt" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="individualPDF/Lab2V2_Kelsey.pdf" frameborder="0" width="960" height="569"></iframe>
   
  <h3>----------------------------------------------------------------------------------------------------</h3>
 	  
