--- a/individual.html
+++ b/individual.html
@@ -90,19 +90,19 @@
   <iframe src="individualPDF/Lab2V2_AlexBrown.pdf" frameborder="0" width="960" height="569"></iframe>
   
  <h3>----------------------------------------------------------------------------------------------------</h3>
- <!-- Need Jodi's Docs -->
+
  <h3>Nia (Jodi) Newton</h3>
  <h3>Lab 1 Version 1</h3>
-  <iframe src="individualPDF/test2.txt" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="individualPDF/Lab1V1_NiaNewton.pdf" frameborder="0" width="960" height="569"></iframe>
 
   <h3>Lab 1 Version 2</h3>
-  <iframe src="individualPDF/test2.txt" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="individualPDF/Lab1V2_NiaNewton.pdf" frameborder="0" width="960" height="569"></iframe>
   
   <h3>Lab 2 - Section 1 & 2 Version 1</h3>
-  <iframe src="individualPDF/test2.txt" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="individualPDF/Lab2V1_NiaNewton.pdf" frameborder="0" width="960" height="569"></iframe>
 
   <h3>Lab 2 - Section 1 & 2 Version 2</h3>
-  <iframe src="individualPDF/test2.txt" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="individualPDF/Lab2V2_NiaNewton.pdf" frameborder="0" width="960" height="569"></iframe>
   
   <h3>----------------------------------------------------------------------------------------------------</h3>
   <!-- Need Adam's Docs -->
