--- a/individual.html
+++ b/individual.html
@@ -152,17 +152,18 @@
   <h3>----------------------------------------------------------------------------------------------------</h3>
   <!-- Need David's Docs -->
   <h3>David Jennings</h3>
+
   <h3>Lab 1 Version 1</h3>
-  <iframe src="individualPDF/test2.txt" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vQw1XiZaR2mt9b2fp3LrSxte4WPiWjgLgz5OEcPsPYdF7k13FUcWSOoy9Chf5XpzjD8OQNm2k1g7G67/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
 
   <h3>Lab 1 Version 2</h3>
-  <iframe src="individualPDF/test2.txt" frameborder="0" width="960" height="569"></iframe>
-  
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vQw1XiZaR2mt9b2fp3LrSxte4WPiWjgLgz5OEcPsPYdF7k13FUcWSOoy9Chf5XpzjD8OQNm2k1g7G67/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+
   <h3>Lab 2 - Section 1 & 2 Version 1</h3>
-  <iframe src="individualPDF/test2.txt" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vRPGpH6Y9v3GIrZjUIa2trt11lvI-kSt7vcG7XqOjsC3UT5F481HTVe3gS1D39MTkTUknqAmQ0q7TLB/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
 
   <h3>Lab 2 - Section 1 & 2 Version 2</h3>
-  <iframe src="individualPDF/test2.txt" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vRPGpH6Y9v3GIrZjUIa2trt11lvI-kSt7vcG7XqOjsC3UT5F481HTVe3gS1D39MTkTUknqAmQ0q7TLB/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
   
   <h3>----------------------------------------------------------------------------------------------------</h3>
   
