--- a/individual.html
+++ b/individual.html
@@ -59,8 +59,7 @@
   </header>
 
 <!-- Going to put the list here -->	  
- <!-- Need Kelsey's Docs -->
- <h3>CURRENTLY EDITING</h3>
+  <h3>CURRENTLY EDITING</h3>
  <h3>Kelsey Marantan</h3>
  <h3>Lab 1 Version 1</h3>
   <iframe src="individualPDF/Lab1V1_KelseyMarantan.pdf" frameborder="0" width="960" height="569"></iframe>
@@ -108,16 +107,16 @@
   <!-- Need Adam's Docs -->
   <h3>Adam Pieroni</h3>
   <h3>Lab 1 Version 1</h3>
-  <iframe src="individualPDF/test2.txt" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="individualPDF/Lab1V1_AdamPieroni.pdf" frameborder="0" width="960" height="569"></iframe>
 
   <h3>Lab 1 Version 2</h3>
-  <iframe src="individualPDF/test2.txt" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="individualPDF/Lab1V2_AdamPieroni.pdf" frameborder="0" width="960" height="569"></iframe>
   
   <h3>Lab 2 - Section 1 & 2 Version 1</h3>
-  <iframe src="individualPDF/test2.txt" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="individualPDF/Lab2V1_AdamPieroni.pdf" frameborder="0" width="960" height="569"></iframe>
 
   <h3>Lab 2 - Section 1 & 2 Version 2</h3>
-  <iframe src="individualPDF/test2.txt" frameborder="0" width="960" height="569"></iframe>
+  <iframe src="individualPDF/Lab2V2_AdamPieroni.pdf" frameborder="0" width="960" height="569"></iframe>
   
   <h3>----------------------------------------------------------------------------------------------------</h3>
   
@@ -150,7 +149,6 @@
   <iframe src="individualPDF/Lab2V2_PhillipWilson.pdf" frameborder="0" width="960" height="569"></iframe>
   
   <h3>----------------------------------------------------------------------------------------------------</h3>
-  <!-- Need David's Docs -->
   <h3>David Jennings</h3>
 
   <h3>Lab 1 Version 1</h3>
